--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "agency",
   "title": "Agency",
   "version": "3.3.7+1",
+  "homepage": "http://startbootstrap.com/template-overviews/agency",
   "author": "Start Bootstrap",
+  "license": {
+    "type": "MIT",
+    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
+  },
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
@@ -17,4 +22,8 @@
     "gulp-util": "^3.0.8",
     "jquery": "^1.11.3"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+  }
 }
