--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
