--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "agency",
-  "title": "Agency",
+  "name": "Team Tibet",
+  "title": "Team Tibet Snowlion NYFC",
   "version": "3.3.7+1",
-  "homepage": "http://startbootstrap.com/template-overviews/agency",
-  "author": "Start Bootstrap",
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE"
-  },
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "browser-sync": "^2.13.0",
@@ -24,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
+    "url": "https://github.com/azeneli/snowlionnyfc"
   },
   "scripts": {
     "start": "agency.min.js"
